hphp/test/quick/foreach-bad.php.expectf
HipHop Fatal error: Can't use return value in write context in %s/test/quick/foreach-bad.php on line 5
